--- a/inst/rmarkdown/resources/govuk-alpha-banner.html
+++ b/inst/rmarkdown/resources/govuk-alpha-banner.html
@@ -1,10 +1,12 @@
-<div class="govuk-phase-banner">
-  <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag ">
-  alpha
-</strong>
-    <span class="govuk-phase-banner__text">
-      This is a new service – your
-      <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-    </span>
-  </p>
+<div class="govuk-width-container">
+  <div class="govuk-phase-banner">
+    <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag ">
+        alpha
+      </strong>
+      <span class="govuk-phase-banner__text">
+        This is a new service – your
+        <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+      </span>
+    </p>
+  </div>
 </div>
