--- a/inst/rmarkdown/resources/govuk-beta-banner.html
+++ b/inst/rmarkdown/resources/govuk-beta-banner.html
@@ -5,7 +5,7 @@
       </strong>
       <span class="govuk-phase-banner__text">
         This is a new service – your
-        <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+        <a class="govuk-link" href="%s">feedback</a> will help us to improve it.
       </span>
     </p>
   </div>
