Don't mention crown in logo comment

--- a/inst/rmarkdown/resources/navbar.html
+++ b/inst/rmarkdown/resources/navbar.html
@@ -5,7 +5,7 @@
         <!-- href is navbar homepage -->
         <a href="%s" class="govuk-header__link govuk-header__link--homepage">
           <span class="govuk-header__logotype">
-            <!-- GOV.UK Crown Logo govuk-logo-svg.html -->
+            <!-- logo -->
             %s
             <!-- navbar title -->
             %s
