Make title below navbar conditional

--- a/inst/rmarkdown/resources/govuk.html
+++ b/inst/rmarkdown/resources/govuk.html
@@ -111,7 +111,9 @@ $endif$
 
   <div class="govuk-width-container">
     <main class="govuk-main-wrapper " id="main-content" role="main">
+      $if(title)$
       <h1 class="govuk-heading-xl">$title$</h1>
+      $endif$
       $body$
     </main>
   </div>
