Remove govukish template
It is easier to maintain a single template, and the only difference in
govukish.html was the included css file.  This is replaced by a pandoc variable.

--- a/inst/rmarkdown/resources/govuk.html
+++ b/inst/rmarkdown/resources/govuk.html
@@ -77,7 +77,7 @@ $endif$
 $endif$
 
   <!--[if !IE 8]><!-->
-  <link href="govuk.css" rel="stylesheet" />
+  <link href="$css$" rel="stylesheet" />
   <!--<![endif]-->
 
   <!--[if IE 8]>
