Rename html templates

--- a/inst/rmarkdown/resources/navbar.html
+++ b/inst/rmarkdown/resources/navbar.html
@@ -7,12 +7,12 @@
           <span class="govuk-header__logotype">
             <!-- logo -->
             %s
-            <!-- navbar title -->
+            <!-- navbar organisation -->
             %s
           </span>
         </a>
       </div>
-      <!-- service name and nav govuk-header-content.html -->
+      <!-- service name and nav header-content.html -->
       %s
     </div>
   </header>
