--- a/inst/rmarkdown/resources/navbar-organisation.html
+++ b/inst/rmarkdown/resources/navbar-organisation.html
@@ -1,4 +1,4 @@
             <span class="govuk-header__logotype-text">
-              <!-- navbar title -->
+              <!-- navbar organisation -->
               %s
             </span>
