Drop 'services' in banner wording (fix #21)

--- a/inst/rmarkdown/resources/beta-banner.html
+++ b/inst/rmarkdown/resources/beta-banner.html
@@ -4,7 +4,7 @@
         beta
       </strong>
       <span class="govuk-phase-banner__text">
-        This is a new service – your
+        This is new – your
         <a class="govuk-link" href="%s">feedback</a> will help us to improve it.
       </span>
     </p>
