--- a/inst/rmarkdown/resources/govuk.html
+++ b/inst/rmarkdown/resources/govuk.html
@@ -4,7 +4,7 @@
 <head>
   <!-- Google Analytics --> %s
   <meta charset="utf-8" />
-  <title>GOV.UK - The best place to find government services and information</title>
+  <title>%s</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#0b0c0c" />
 
