Travis built book

--- a/index.html
+++ b/index.html
@@ -4147,7 +4147,7 @@ These websites and documents use govdown.
 <a href="https://mattkerlogue.github.io/coding-guide/" class="uri govuk-link">https://mattkerlogue.github.io/coding-guide/</a>
 </li>
 <li class="govuk-body">
-<a href="https://matt-dray.github.io/drake-egg-rap/" class="uri govuk-link">https://matt-dray.github.io/drake-egg-rap/</a>
+<a href="https://matt-dray.github.io/drake-egg-rap/egg-report.html" class="uri govuk-link">https://matt-dray.github.io/drake-egg-rap/egg-report.html</a>
 </li>
 </ul>
 <h2 id="installation" class="govuk-heading-l">Installation</h2>
