--- a/index.html
+++ b/index.html
@@ -4141,7 +4141,7 @@ These websites and documents use govdown.
 <a href="https://ukgovdatascience.github.io/rap-website/" class="uri govuk-link">https://ukgovdatascience.github.io/rap-website/</a>
 </li>
 <li class="govuk-body">
-<a href="https://co-analysis.github.io/csmapping/cs_lad.html" class="uri govuk-link">https://co-analysis.github.io/csmapping/cs_lad.html</a>
+<a href="https://co-analysis.github.io/csmapping/cs_lad_2019.html" class="uri govuk-link">https://co-analysis.github.io/csmapping/cs_lad_2019.html</a> (<a href="https://co-analysis.github.io/csmapping/cs_lad_2018.html" class="govuk-link">2018 version</a>)
 </li>
 <li class="govuk-body">
 <a href="https://mattkerlogue.github.io/coding-guide/" class="uri govuk-link">https://mattkerlogue.github.io/coding-guide/</a>
