Embed highlight.js so examples don't need internet
Because CRAN asked for the examples to run rather than \dontrun{}

--- a/inst/rmarkdown/resources/govuk.html
+++ b/inst/rmarkdown/resources/govuk.html
@@ -18,11 +18,11 @@
 </style>
 
 <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/default.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
+      href="highlightjs.default.min.css">
+<script src="highlight.min.js"></script>
 <script
  charset="UTF-8"
- src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/languages/r.min.js"></script>
+ src="r.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
   <!--[if !IE 8]><!-->
