Travis built book

--- a/index.html
+++ b/index.html
@@ -4152,7 +4152,11 @@ These websites and documents use govdown.
 </ul>
 <h2 id="installation" class="govuk-heading-l">Installation</h2>
 <p class="govuk-body">
-The package is only hosted on <a href="https://github.com/ukgovdatascience" class="govuk-link">GitHub</a>, not on CRAN. Install it with the devtools package.
+You can install the released version of govdown from <a href="https://CRAN.R-project.org" class="govuk-link">CRAN</a> with:
+</p>
+<pre class="r"><code>install.packages(&quot;govdown&quot;)</code></pre>
+<p class="govuk-body">
+And the development version from <a href="https://github.com/" class="govuk-link">GitHub</a> with:
 </p>
 <pre class="r"><code># install.packages(&quot;devtools&quot;) # if devtools is not already installed
 devtools::install_github(&quot;ukgovdatascience/govdown&quot;)</code></pre>
