Travis built book

--- a/index.html
+++ b/index.html
@@ -4132,6 +4132,11 @@ Govdown is an R package for creating websites and standalone HTML pages that use
 <p class="govuk-body">
 Use govdown in the same way as <a href="https://rmarkdown.rstudio.com/" class="govuk-link">R Markdown</a>, but specify <code>output: govdown::govdown_document</code> instead of <code>output: html_document</code> in the YAML metadata of the document, or in the <code>_site.yml</code> file of the website.
 </p>
+<div class="govuk-inset-text">
+<p class="govuk-body">
+You can’t publish govdown documents on the GOV.UK website itself. Please follow the normal guidance for <a href="https://www.gov.uk/guidance/how-to-publish-on-gov-uk" class="govuk-link">how to publish on GOV.UK</a>.
+</p>
+</div>
 <h2 id="examples" class="govuk-heading-l">Examples</h2>
 <p class="govuk-body">
 These websites and documents use govdown.
