Travis built book

--- a/accessibility.html
+++ b/accessibility.html
@@ -4167,11 +4167,11 @@ all pages have the same page title
 </ul>
 <h2 id="what-to-do-if-you-cannot-access-parts-of-this-website" class="govuk-heading-l">What to do if you cannot access parts of this website</h2>
 <p class="govuk-body">
-If you need information on this website in a different format like accessible PDF, large print, easy read, audio recording or braille, email <a href="mailto:data-science@digital.cabinet-office.gov.uk" class="govuk-link">data-science@digital.cabinet-office.gov.uk</a>. We’ll consider your request and get back to you in 7 days.
+If you need information on this website in a different format like accessible PDF, large print, easy read, audio recording or braille, email <a href="mailto:data-science@digital.cabinet-office.gov.uk" class="email govuk-link">data-science@digital.cabinet-office.gov.uk</a>. We’ll consider your request and get back to you in 7 days.
 </p>
 <h2 id="reporting-accessibility-problems-with-this-website" class="govuk-heading-l">Reporting accessibility problems with this website</h2>
 <p class="govuk-body">
-We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, email <a href="mailto:data-science@digital.cabinet-office.gov.uk" class="govuk-link">data-science@digital.cabinet-office.gov.uk</a>.
+We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, email <a href="mailto:data-science@digital.cabinet-office.gov.uk" class="email govuk-link">data-science@digital.cabinet-office.gov.uk</a>.
 </p>
 <h2 id="enforcement-procedure" class="govuk-heading-l">Enforcement procedure</h2>
 <p class="govuk-body">
@@ -4179,7 +4179,7 @@ The Equality and Human Rights Commission (EHRC) is responsible for enforcing the
 </p>
 <h2 id="technical-information-about-this-websites-accessibility" class="govuk-heading-l">Technical information about this website’s accessibility</h2>
 <p class="govuk-body">
-The Government Digital Service is committed to making its website accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) ( No. 2) Accessibility Regulations 2018.
+The Government Digital Service is committed to making its website accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.
 </p>
 <p class="govuk-body">
 This website is fully compliant with the Web Content Accessibility Guidelines version 2.1 AA standard.
