--- a/index.html
+++ b/index.html
@@ -4239,7 +4239,7 @@ Subheadings have more <code>#</code>s
 </p>
 <pre class="md"><code>## Helpful subheading
 
-### Can't remember what the main topic was?
+### Can&#39;t remember what the main topic was?
 
 #### Four levels of headings are available!</code></pre>
 <h3 id="headings-with-captions" class="govuk-heading-m"><span class="govuk-caption-m">This is a caption</span>Headings with captions</h3>
@@ -4300,7 +4300,7 @@ Hyperlinks work as normal. The GOV.UK Design System also supports <a href="https
 </p>
 <pre class="md"><code>[normal hyperlink](https://design-system.service.gov.uk).
 
-[hyperlink that doesn't turn purple](https://design-system.service.gov.uk){.no-visited-state}.</code></pre>
+[hyperlink that doesn&#39;t turn purple](https://design-system.service.gov.uk){.no-visited-state}.</code></pre>
 <h3 id="bullets-and-numbered-lists" class="govuk-heading-m">Bullets and numbered lists</h3>
 <p class="govuk-body">
 Bulletted lists work as normal, but nested bullets don’t look very good because they aren’t really supported by the GOV.UK Design System.
@@ -4326,7 +4326,7 @@ Third bullet
 </ul>
 <pre class="md"><code>* First bullet
   * Nested bullets are available but ...
-  * ... they don't look very good because the GOV.UK Design System doesn't
+  * ... they don&#39;t look very good because the GOV.UK Design System doesn&#39;t
     really support them.
 * Second bullet
 * Third bullet</code></pre>
@@ -4548,7 +4548,7 @@ Here are some details on the
 Multiple paragraphs can be contained in details.
 
 :::</code></pre>
-<details class="govuk-details" data-module="govuk-details"><summary class="govuk-details__summary"><span class="govuk-details__summary-text"></span></summary><div class="govuk-details__text">
+<details class="govuk-details" data-module="govuk-details"><summary class="govuk-details__summary"><span class="govuk-details__summary-text">Details</span></summary><div class="govuk-details__text">
 <p class="govuk-body">
 Here are some details on the <a href="https://www.gov.uk/government/organisations/government-digital-service" class="govuk-link">Government Digital Service</a>.
 </p>
@@ -4584,8 +4584,8 @@ Create code chunks that are to be evaluated as follows.
 <p class="govuk-body">
 Python code chunks also work, as do any of the languages supported by knitr.
 </p>
-<pre class="python"><code>'Monty Python'.split()</code></pre>
-<pre><code>## ['Monty', 'Python']</code></pre>
+<pre class="python"><code>&#39;Monty Python&#39;.split()</code></pre>
+<pre><code>## [&#39;Monty&#39;, &#39;Python&#39;]</code></pre>
 <h3 id="images" class="govuk-heading-m">Images</h3>
 <p class="govuk-body">
 Images use the normal markdown syntax.
