Travis built book

--- a/index.html
+++ b/index.html
@@ -4548,7 +4548,7 @@ Here are some details on the
 Multiple paragraphs can be contained in details.
 
 :::</code></pre>
-<details class="govuk-details" data-module="govuk-details"><summary class="govuk-details__summary"><span class="govuk-details__summary-text"></span></summary><div class="govuk-details__text">
+<details class="govuk-details" data-module="govuk-details"><summary class="govuk-details__summary"><span class="govuk-details__summary-text">Details</span></summary><div class="govuk-details__text">
 <p class="govuk-body">
 Here are some details on the <a href="https://www.gov.uk/government/organisations/government-digital-service" class="govuk-link">Government Digital Service</a>.
 </p>
