Travis built book

--- a/index.html
+++ b/index.html
@@ -4540,6 +4540,10 @@ Details make a page easier to scan by letting users reveal more detailed informa
 <p class="govuk-body">
 The syntax uses the summary attribute to provide the top level information with the content provided by the text within.
 </p>
+<div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span><strong class="govuk-warning-text__text"><span class="govuk-warning-text__assistive">Warning</span>
+The details component requires Pandoc version 2.5 or more recent.
+</strong>
+</div>
 <pre class="md"><code>::: {.details summary=&quot;Details&quot;}
 
 Here are some details on the
