Travis built book

--- a/index.html
+++ b/index.html
@@ -4141,7 +4141,7 @@ You can’t publish govdown documents on the GOV.UK website itself. Please follo
 <p class="govuk-body">
 These websites and documents use govdown.
 </p>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 <a href="https://ukgovdatascience.github.io/rap-website/" class="uri govuk-link">https://ukgovdatascience.github.io/rap-website/</a>
 </li>
@@ -4308,10 +4308,10 @@ Hyperlinks work as normal. The GOV.UK Design System also supports <a href="https
 <p class="govuk-body">
 Bulletted and nested lists work as normal, except that nested lists don’t look very good because they aren’t supported by the GOV.UK Design System. Govdown defers to the designers who made this decision, but if you have evidence of a need for nested lists, please submit it to the GOV.UK Design System by opening a new GitHub issue on the <a href="https://github.com/alphagov/govuk-frontend/issues" class="govuk-link">GOV.UK frontend repository</a>.
 </p>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 First bullet
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 Nested bullets are available but …
 </li>
