--- a/NEWS.html
+++ b/NEWS.html
@@ -4125,13 +4125,13 @@ color: #d14;
     <main class="govuk-main-wrapper " id="main-content" role="main">
             <h1 id="govdown-0.7.1" class="govuk-heading-xl">govdown 0.7.1</h1>
 <h1 id="govdown-0.7.0" class="govuk-heading-xl">govdown 0.7.0</h1>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 Upgrade to GOV.UK Frontent release v3.2.0. No user-facing changes.
 </li>
 <li class="govuk-body">
 Add an accessibility statement
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 Fix a tabbing problem with code blocks (#45)
 </li>
@@ -4157,7 +4157,7 @@ Fix rendering hang with large images (04473a4530e540dfdf96be0f768c0568714ff3d3)
 </li>
 </ul>
 <h1 id="govdown-0.6.0" class="govuk-heading-xl">govdown 0.6.0</h1>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 Upgrade to GOV.UK Frontend release v3.1.0. Many user-facing changes. See the <a href="https://github.com/alphagov/govuk-frontend/releases/tag/v3.1.0" class="govuk-link">GOV.UK Frontend release notes</a>. None of the changes are breaking for users of govdown.
 </li>
@@ -4170,7 +4170,7 @@ Support accordions (#35) <span class="citation">@mattkerlogue</span>.
 <p class="govuk-body">
 Upgrade to GOV.UK Frontend release v2.13.0. One user-facing change. The crown logo image in the header now:
 </p>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 has height and width attributes set
 </li>
@@ -4182,7 +4182,7 @@ aligns better with ‘GOV.UK’ in IE8
 (Pull request #1419)
 </p>
 <h2 id="govdown-changes" class="govuk-heading-l">Govdown changes:</h2>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 Support warning text (#30, #29)
 </li>
@@ -4194,13 +4194,13 @@ Support shiny server by passing through args (#33) (#33) <span class="citation">
 </li>
 </ul>
 <h1 id="govdown-0.4.1" class="govuk-heading-xl">govdown 0.4.1</h1>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 Upgrade to GOV.UK Frontend release v2.12.0. No user-facing changes.
 </li>
 </ul>
 <h1 id="govdown-0.4.0" class="govuk-heading-xl">govdown 0.4.0</h1>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 Overhauled yaml configuration to make websites and standalone pages more consistent.
 </li>
@@ -4218,7 +4218,7 @@ The “skip to main content” link appears above the banner (press Tab to find 
 </li>
 </ul>
 <h1 id="govdown-0.3.0" class="govuk-heading-xl">govdown 0.3.0</h1>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 Implemented bold according to the GOV.UK Design System.
 </li>
@@ -4227,7 +4227,7 @@ Disabled italics and strike-through, which are not supported by the GOV.UK Desig
 </li>
 </ul>
 <h1 id="govdown-0.2.0" class="govuk-heading-xl">govdown 0.2.0</h1>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 Added implementation of the <code>Details</code> component from the GOV.UK Design System.
 </li>
@@ -4252,7 +4252,7 @@ Minor tweaks and bugfixes.
 First release.
 </p>
 <h1 id="govdown-0.0.0.9000" class="govuk-heading-xl">govdown 0.0.0.9000</h1>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 Added a <code>NEWS.md</code> file to track changes to the package.
 </li>
