--- a/accessibility.html
+++ b/accessibility.html
@@ -4127,7 +4127,7 @@ color: #d14;
 <p class="govuk-body">
 <a href="./index.Rmd" class="govuk-link">This website</a> is run by the <a href="https://www.gov.uk/government/organisations/government-digital-service" class="govuk-link">Government Digital Service</a>. We want as many people as possible to be able to use this website. For example, that means you should be able to:
 </p>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 change colours, contrast levels and fonts
 </li>
@@ -4154,7 +4154,7 @@ AbilityNet has advice on making your device easier to use if you have a disabili
 <p class="govuk-body">
 We know some parts of this website are not fully accessible:
 </p>
-<ul class=".govuk-list govuk-list--bullet">
+<ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
 code chunks aren’t read verbatim by screen reader software, for example punctuation is sometimes not read
 </li>
